--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <header>
   <div class="container">
       <a href="#Home" class="Logo">
-          <img src="/image/1651322848189.png" alt="logo" >
+          <img src="image/1651322848189.png" alt="logo" >
         <!-- <img src="../New Templete 2/image/logo2.png" alt="logo" style="width: 80px;"> -->
         </a>
       <nav>
@@ -120,7 +120,7 @@
   <!-- Start Design  -->
   <div class="design">
       <div class="image">
-          <img src="/image/mobile.png" alt="Mobile">
+          <img src="image/mobile.png" alt="Mobile">
        </div>
       <div class="text">
           <h2>Our Design comes With...</h2>
@@ -152,56 +152,56 @@
       </div>
       <div class="imgs-container">
           <div class="box">
-              <img src="/image/p1.jpg" alt="">
+              <img src="image/p1.jpg" alt="">
               <div class="caption">
                   <h4>Awesome Image</h4>
                   <p>Photography</p>
               </div>
           </div>
           <div class="box">
-            <img src="/image/p2.jpg" alt="">
+            <img src="image/p2.jpg" alt="">
             <div class="caption">
                 <h4>Awesome Image</h4>
                 <p>Photography</p>
             </div>
         </div>
         <div class="box">
-            <img src="/image/p3.jpg" alt="">
+            <img src="image/p3.jpg" alt="">
             <div class="caption">
                 <h4>Awesome Image</h4>
                 <p>Photography</p>
             </div>
         </div>
         <div class="box">
-            <img src="/image/p4.jpg" alt="">
+            <img src="image/p4.jpg" alt="">
             <div class="caption">
                 <h4>Awesome Image</h4>
                 <p>Photography</p>
             </div>
         </div>
         <div class="box">
-            <img src="/image/p5.jpg" alt="">
+            <img src="image/p5.jpg" alt="">
             <div class="caption">
                 <h4>Awesome Image</h4>
                 <p>Photography</p>
             </div>
         </div>
         <div class="box">
-            <img src="/image/p6.jpg" alt="">
+            <img src="image/p6.jpg" alt="">
             <div class="caption">
                 <h4>Awesome Image</h4>
                 <p>Photography</p>
             </div>
         </div>
         <div class="box">
-            <img src="/image/p7.jpg" alt="">
+            <img src="image/p7.jpg" alt="">
             <div class="caption">
                 <h4>Awesome Image</h4>
                 <p>Photography</p>
             </div>
         </div>
         <div class="box">
-            <img src="/image/p8.jpg" alt="">
+            <img src="image/p8.jpg" alt="">
             <div class="caption">
                 <h4>Awesome Image</h4>
                 <p>Photography</p>
@@ -215,7 +215,7 @@
   <!-- Start Video -->
   <div class="video">
       <video autoplay  muted loop>
-          <source src="/image/awesome-video.mp4" type="video/mp4">
+          <source src="image/awesome-video.mp4" type="video/mp4">
       </video>
       <div class="text">
           <h2>Super Awesome vidio here</h2>
@@ -232,7 +232,7 @@
               <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Fuga exercitationem soluta voluptatem
                 </p>
           </div>
-          <img src="/image/about.png" alt="">
+          <img src="image/about.png" alt="">
       </div>
   </div>
   <!-- End About -->
