--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
   <header>
   <div class="container">
       <a href="#Home" class="Logo">
-          <img src="image/1651322848189.png" alt="logo" >
+          <img src="1651322848189.png" alt="logo" >
         <!-- <img src="../New Templete 2/image/logo2.png" alt="logo" style="width: 80px;"> -->
         </a>
       <nav>
